# cidr-brewer

./: .coveragerc  .flake8  .travis.yml  README.md  cidrbrewer.py  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: lint.yml  tests.yml
examples/: example1.txt  example2.txt  example3.txt  example4.txt  example5.txt  example6.txt
tests/: test_utility.py  test_utility_display.py
