[project]
name = "cidr-brewer"
version = "1.0.0"
description = "'A CLI utility for working with classless IP addresses"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
keywords = ["networking", "ip", "addresses", "cidr"]

[project.urls]
homepage = "https://github.com/caleb531/cidr-brewer"
documentation = "https://github.com/caleb531/cidr-brewer#readme"
repository = "https://github.com/caleb531/cidr-brewer"
changelog = "https://github.com/caleb531/cidr-brewer/releases"

[project.scripts]
cidr-brewer = "cidrbrewer.__main__:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cidrbrewer"
module-root = ""

[dependency-groups]
dev = [
    "black==24.10.0",
    "coverage==7.6.10",
    "nose2==0.15.1",
    "ruff>=0.12.0",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]

# Configuration for coverage.py (https://pypi.python.org/pypi/coverage)

[tool.coverage.run]
# Enable branch coverage
branch = true
# Only check coverage for source files
include = ["cidrbrewer/*.py"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    # Ignore non-runnable code
    "if __name__ == .__main__.:",
    "pass",
]
